# kaggle-projects

./: CONTRIBUTING.md
playground-s5e4-podcast-listening-time/: .gitignore  README.md  check_submissions.py  download_data.sh  exp005_lessons_and_exp006_strategy.md  improvement_plan.md  main.py  pyproject.toml  submission_history.json
playground-s5e4-podcast-listening-time/config/: README.md  mlflow_config.example.json
playground-s5e4-podcast-listening-time/data/: README.md
playground-s5e4-podcast-listening-time/experiments/exp000/: README.md  exp000.ipynb
playground-s5e4-podcast-listening-time/experiments/exp001/: README.html  README.md  exp001.ipynb  experiment_summary.json  log_to_mlflow.py
playground-s5e4-podcast-listening-time/experiments/exp002/: README.html  exp002.ipynb  log_to_mlflow.py  run_exp002.py
playground-s5e4-podcast-listening-time/experiments/exp003/: README.html  log_to_mlflow.py  run_exp003.py
playground-s5e4-podcast-listening-time/experiments/exp004/: README.html  log_to_mlflow.py  run_exp004.py  run_exp004_fast.py
playground-s5e4-podcast-listening-time/experiments/exp005/: README.html  README.md  log_to_mlflow.py  run_exp005.py
playground-s5e4-podcast-listening-time/experiments/exp006/: README.html  README.md  (+2 more)
playground-s5e4-podcast-listening-time/results/: README.md
playground-s5e4-podcast-listening-time/scripts/: update_mlflow_configs.py
playground-s5e4-podcast-listening-time/src/: README.md  mlflow_utils.py  sample_analysis_config.json  submit_experiment.py  update_mlflow.py
titanic/: .gitignore  README.md  pyproject.toml
(+199 files in other folders)
