[project]
name = "playground-s5e4-podcast-listening-time"
version = "0.1.0"
description = "Kaggle Playground Series S5E4: Podcast Listening Time Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "nbconvert>=7.16.6",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.4",
]
